@@ -1,4 +1,8 @@
-﻿drkns 17.03.2015 22:42:42 +0200 - build 4309
+﻿drkns 17.03.2015 23:32:39 +0200 - build 4310
+
+1. 0002970: Случаи необновления заголовка окна
+
+drkns 17.03.2015 22:42:42 +0200 - build 4309
 
 1. Продолжаем ломать редактор. Возможны сказочные баги.
 
